--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.2.25",
     "sass": "^1.63.2",
     "swiper": "^9.4.1"
   },
