--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.25",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "sass": "^1.63.2",
     "swiper": "^9.4.1"
   },
